--- a/4.Frames Q/left_frame.html
+++ b/4.Frames Q/left_frame.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Departments</title></head>
-<body bgcolor = "brown">
+<body bgcolor = "orange">
 <h2 align="center" style="color: beige;">Departments</h2>
 <a href="mca.html" target="rightFrame">MCA</a>
 </body>
