--- a/inline_css.html
+++ b/inline_css.html
@@ -1,36 +1,24 @@
-<!DOCTYPE html>
+<html>
 <head>  
 <title>Inline Css</title>
 </head>
 
 <body bgcolor="beige">		
-<h2 style="color: blue; text-align:center;  font-family: 'Comic Sans MS', cursive;" >MES ENGINEERING COLLEGE</h2>
+<h2 style="color: blue; text-align:center;  font-family: 'Comic Sans MS', cursive; font-style: italic; " >MES ENGINEERING COLLEGE</h2>
 
-<p style="color: brown; font-size: 15px; font-family: 'Courier New', monospace;">M.E.S College of Engineering, the first Engineering College established under the self financing sector in Kerala is situated on the beautiful and serene banks of Nila or Bharathapuzha. It was established as an institution with minority status in 1994.</p>
+<p style="color: brown;">M.E.S College of Engineering, the first Engineering College established under the self financing sector in Kerala is situated on the beautiful and serene banks of Nila or Bharathapuzha. It was established as an institution with minority status in 1994.</p>
 
 <h3 style="color: grey; font-family: 'Times New Roman', serif;">UG Programmes</h3> 		
-<ol style="color: blue; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
+<ol style="color: blue;">
 	<li>B-Tech</li>
 	<li>BCA</li>
 </ol>
 
-<h3 style="color: green; font-family: Georgia, serif;">PG Programmes</h3>		
-<ul style="color: orange; font-family: Impact, Charcoal, sans-serif;">
+<h3 style="color: green; font-style: italic; ">PG Programmes</h3>		
+<ul>
 	<li>Tom</li>
 	<li>Jerry</li>
 </ul>
-
-<h3 style="color: brown; font-family: Verdana, Geneva, sans-serif;">Departments</h3>		
-<dl>
-	<dt style="color: orange; font-family: 'Lucida Console', Monaco, monospace;">UG</dt>
-	<dd>MECH</dd>
-	<dd>ECE</dd>
-
-	<dt style="color: orange; font-family: Arial, sans-serif;">PG</dt>
-	<dd>MCA</dd>
-	<dd>MBA</dd>
-</dl> 
-
 
 </body>
 </html>
