--- a/5.Forms/student_form_css.html
+++ b/5.Forms/student_form_css.html
@@ -1,37 +1,29 @@
 <html>
-<head><title>Registration Form</title>
+<head>
+
+<title>Registration Form</title>
 
 <style>
 
-label[for="male"], 
-label[for="female"], 
-label[for="other"],
-input[type="radio"] {
-    display: inline;
-    margin-left: 0;
-}
-
 body {
 font-family: Arial, sans-serif;
-background-color: brown;
-margin: 0;
+background-color: green;
 padding: 10px;
 }
 
 h1 {
 text-align:center;
-color: beige;
+color: yellow;
 margin-bottom: 20px;
 }
 
 form {
 border: 3px solid black;
 width: 600px;
-background-color: #fff;
+background-color: yellow;
 padding: 20px;
 margin:auto;
 border-radius: 8px;
-
 }
 
 label {
@@ -40,6 +32,16 @@ width: 140px;
 margin-bottom: 8px;
 font-weight: bold;
 }
+
+
+label[for="male"], 
+label[for="female"], 
+label[for="other"],
+input[type="radio"] {
+    display: inline;
+
+}
+
 
 input[type="text"],
 input[type="password"],
@@ -64,33 +66,27 @@ margin-bottom: 15px;
 border-radius: 5px;
 }
 
+
 legend {
-font-weight: bold;
+font-style: italic;
 }
+
 
 input[type="submit"] {
 padding: 10px 20px;
 font-size: 14px;
-border: none;
+border: 2px solid black;
 border-radius: 4px;
-cursor: pointer;
-background-color: yellow;
+background-color: green;
 color: black;
 }
 
-button {
-background-color: brown;
-color: white;
-margin-left: 10px;
-}
 
 input[type="submit"]:hover {
-background-color: brown;
+background-color: blue;
+color: white;
 }
 
-button:hover {
-background-color: #da190b;
-}
 </style>
 </head>
 
@@ -136,8 +132,9 @@ background-color: #da190b;
 <input type="radio" id="other" name="other" value="other">
 <label for="other">Others</label><br><br>
 
+<h4>Languages Known</h4>
 <fieldset>
-<legend>Languages Known</legend><br>
+<legend> Select The Languages</legend>
 <input type="checkbox" id="english" name="language" value="english">
 <label for="english">English</label><br>
 <input type="checkbox" id="malayalam" name="language" value="malayalam">
