--- a/6.css_examples/all_css.html
+++ b/6.css_examples/all_css.html
@@ -1,62 +1,77 @@
 <html>
-<head>  
+<head>
 <title>Css Styling</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 <style>
+
 body{
-background-color:purple;
+background-color: brown;
 }
 
 h2{
-color: beige; 
-text-align:center;  
-font-family: 'Comic Sans MS', cursive; 
-font-style: italic; 
+text-align:center;
+font-family: 'Comic Sans MS', cursive;
+font-style: italic;
 }
-</style>
 
+h3, h2{
+color: black;
+}
+
+</style>
 </head>
 
-<body>		
-<h2>MES ENGINEERING COLLEGE</h2>
-<p style="color:yellow">M.E.S College of Engineering, the first Engineering College established under the self financing sector in Kerala is situated on the beautiful and serene banks of Nila or Bharathapuzha. It was established as an institution with minority status in 1994.</p>
-<h3 style="color:beige">UG Programmes</h3> 		
-<ol style="color:yellow">
-<li>B-Tech</li>
-<li>BCA</li>
+<body>
+
+<h2>BEN 10</h2>
+<p style="color:beige">Ben Tennyson is a 10-year-old hero.He finds the Omnitrix and turns into aliens like Heatblast, XLR8, Four Arms,etc... . He fights Vilgax and saves the world every summer with cousin Gwen and Grandpa Max.</p>
+
+<h3>Aliens</h3>
+<ol style="color:beige">
+<li>Heatblast</li>
+<li>Four Arms</li>
 </ol>
 
-<h3>PG Programmes</h3>		
-<ul style="color:yellow">
-<li>MCA</li>
-<li>MBA</li>
+<h3>Villains</h3>
+<ul style="color:beige">
+<li>Vilgax</li>
+<li>Kevin</li>
 </ul>
 
-<h3>Marks Table</h3>	
+<h3>Top Aliens</h3>
 <table>
 <thead>
-<tr>
-<th>RegNo</th>
-<th>Name</th>
-<th>Marks</th>
-</tr>
-</thead>
 
-<tbody>
 <tr>
-<td>101</td>
-<td>Nihal</td>
-<td>96</td>
+<th>No</th>
+<th>Name</th>
+<th>Type</th>
 </tr>
+
+</thead>
+<tbody>
+
 <tr>
-<td>102</td>
-<td>Arjun</td>
-<td>95</td>
+<td>1</td>
+<td>Heatblast</td>
+<td>Fire</td>
+</tr>
+
+<tr>
+<td>2</td>
+<td>Four Arms</td>
+<td>Strength</td>
+</tr>
+
+<tr>
+<td>3</td>
+<td>Diamondhead</td>
+<td>Crystal</td>
 </tr>
 
 </tbody>
 </table>
+
 </body>
 </html>
-
